[package]
name = "afl-fuzz"
version = "0.1.0"
authors = ["Patrick Ventuzelo <ventuzelo.patrick@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
afl = "0.5"
wasmer-runtime = { path = "../lib/runtime" }
wasmer-runtime-core = { path = "../lib/runtime-core" }
wasmer = { path = "../" }

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "simple_instantiate"
path = "src/simple_instantiate.rs"

[[bin]]
name = "compile"
path = "src/compile.rs"

[[bin]]
name = "validate"
path = "src/validate.rs"

[[bin]]
name = "validate_all_feat"
path = "src/validate_all_feat.rs"

[[bin]]
name = "diff_compile"
path = "src/diff_compile.rs"